# ez-imgui

./: CMakeLists.txt  preconfig.cmake
cmake/: preconfig.cmake
include/ez/: imgui.hpp
include/ez/imgui/: Backend.hpp  Context.hpp  Item.hpp  Layout.hpp  Rotationfunctions.hpp  VecFunctions.hpp
include/ez/imgui/containers/: FlexBox.hpp  Grid.hpp
include/ez/imgui/layout/: Anchor.hpp  Enumerators.hpp  Padding.hpp  Rect.hpp
include/ez/imgui/widgets/: Button.hpp  CheckBox.hpp  ComboBox.hpp  RadioButton.hpp  Text.hpp  TreeNode.hpp  Viewport.hpp
src/: Context.cpp  Item.cpp  VecFunctions.cpp
src/backends/: opengl2.cpp  opengl3.cpp
src/containers/: FlexBox.cpp
src/layout/: Anchor.cpp  Enumerators.cpp  Padding.cpp
tests/: CMakeLists.txt
tests/basic_test/: CMakeLists.txt  main.cpp
tests/glm_test/: CMakeLists.txt  main.cpp
tests/layout_test/: CMakeLists.txt  main.cpp
